# AUVsystem25

asmarine24/: setup.py
asmarine24/launch/: new_auv.launch  test_controller.launch
asmarine24/scripts/: joystick_node.py
asmarine24/src/asmarine24/: joy_map.py
pub_sub/scripts/: SVM_Test_Depth_Correction.py
pub_sub/scripts/14_10_24/: yolo_LTS.py
pub_sub/scripts/3.10.24/: yolo_node.py
pub_sub/scripts/LTS_17_10_24/: camera_node_final.py  camera_test.py  yolo.py
pub_sub/scripts/final_perception/: camera_node_8_oct.py  yolo_node_8_oct.py
slam/: CMakeLists.txt  package.xml  setup.py
slam/config/: auv_param.yaml  auv_param_12_10_2024.txt
slam/launch/: slam.launch
slam/scripts/: EKFO_landmarks.py  test_wrench.py
slam/src/slam/: EKF_class.py
sys_iden/launch/: sys_iden_2.launch
